--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ h6 {
 }
 
 .header-area {
-  background: #4caf50;
+  background:  #525453;
   color: #ffffff;
   display: flex;
   flex-direction: row;
@@ -479,3 +479,20 @@ h6 {
   font-weight: 300;
 }
 /*# sourceMappingURL=style.css.map */
+.type-box{
+  margin-top: 100px;
+}
+.footer-area{
+ 
+  color: rgb(22, 21, 21);
+  border-top: 1px solid rgb(233, 224, 224);
+  
+
+}
+.form-name{
+  margin-top: 100px;
+}
+.manage-type{
+  margin-top: 100px;
+  margin-left: 200px;
+}
